@@ -1,5 +1,6 @@
 package io.github.tobi.laa.reflective.fluent.builders.mojo;
 
+import com.google.common.collect.ImmutableList;
 import lombok.SneakyThrows;
 import org.apache.maven.artifact.Artifact;
 import org.apache.maven.artifact.DependencyResolutionRequiredException;
@@ -22,8 +23,8 @@ import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.io.File;
-import java.util.Set;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Stream;
 
 import static java.util.Collections.emptySet;
@@ -276,11 +277,11 @@ class MavenBuildTest {
 
     @SneakyThrows
     private void mockTestClasspathElements(final String... elements) {
-        doReturn(List.of(elements)).when(mavenProject).getTestClasspathElements();
+        doReturn(ImmutableList.of(elements)).when(mavenProject).getTestClasspathElements();
     }
 
     @SneakyThrows
     private void mockCompileClasspathElements(final String... elements) {
-        doReturn(List.of(elements)).when(mavenProject).getCompileClasspathElements();
+        doReturn(ImmutableList.of(elements)).when(mavenProject).getCompileClasspathElements();
     }
 }
